admin & auth pages
added admin only pages.

--- a/app.yaml
+++ b/app.yaml
@@ -21,8 +21,27 @@ handlers:
 - url: /img
   static_dir: img
 
+#probly rename this, to admin or something 
+- url: /neb/.*
+  script: neb.app
+  secure: always
+  # login: admin
+
+- url: /neb
+  script: neb.app
+  secure: always
+  # login: admin
+
+- url: /neb/
+  script: neb.app
+  secure: always
+  # login: admin
+
 - url: .*
   script: main.app
+
+
+
 
 libraries:
 - name: webapp2
